fix: restore center align of navbar items
Follow-up of #107

--- a/packages/core/styles/components/navbar.pcss
+++ b/packages/core/styles/components/navbar.pcss
@@ -103,7 +103,7 @@
   &__items {
     align-items: center;
     display: flex;
-    flex: 1 1 0;
+    flex: 1;
     min-width: 0;
 
     &--center {
@@ -111,6 +111,10 @@
 
       ^^&__brand {
         margin: 0;
+      }
+
+      + ^&--right {
+        flex: 1;
       }
     }
 
